--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -22,5 +22,8 @@ $ban-def-color: #29314b;
 $skill-def-color: #18203a;
 $skill-light: #fafafa;
 
+//4. experiences
+$xp-def-color: #18203a;
+$xp-dark: #303030;
 
 /*#endregion*/
