PORT 2022.06.25 >> teste alinhamento de icones em habilidadees

--- a/css/style.css
+++ b/css/style.css
@@ -240,9 +240,7 @@ header .burger {
     align-items: center;
   }
   #skills .title {
-    display: flex;
-    justify-content: center;
-    text-align: center;
+    display: grid;
     font-size: 25px;
   }
   #skills .icons {
