--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,7 +13,9 @@
 .container {
   width: 1140px;
   display: flex;
-  justify-content: space-around;
+  justify-content: space-between;
+  padding-left: 20px;
+  padding-right: 20px;
 }
 .success {
   color: $success;
