--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -1,29 +1,14 @@
 /*#region COLOR DEFAULT*/
 //1. default
+$def-light: #cecece;
+
+$def-prim-color: #1a1a1a;
+$def-secn-color: #3b3b3b;
+$def-tert-color: #101010;
+
 $success: #49e749;
 $warning: #e5ee66;
 $danger: #ff6666;
 
-$def-color: #4a557a;
-$def-bar: #172247;
-
-$def-black: #2f2f2f;
-$def-white: #fefefe;
-
-$dark-color: #0e0e0e;
-$light-color: #919191;
-
-//2. banner
-$ban-dark: #0c0c0c;
-$ban-light: #acacac;
-$ban-def-color: #29314b;
-
-//3. skills
-$skill-def-color: #18203a;
-$skill-light: #fafafa;
-
-//4. experiences
-$xp-def-color: #18203a;
-$xp-dark: #303030;
 
 /*#endregion*/
