PORT 2022.06.26 >> teste de estilização

--- a/css/style.css
+++ b/css/style.css
@@ -87,16 +87,17 @@ header .menu > ul li > a:hover {
   justify-content: center;
 }
 #banner .texts {
+  margin: auto;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: #cecece;
 }
 #banner .texts h1 {
-  font-size: 60px;
+  font-size: 66px;
 }
 #banner .texts h2 {
-  font-size: 30px;
+  font-size: 33px;
 }
 
 /*#endregion*/
@@ -148,10 +149,10 @@ header .menu > ul li > a:hover {
     margin: auto;
   }
   #banner .texts h1 {
-    font-size: 48px;
+    font-size: 54px;
   }
   #banner .texts h2 {
-    font-size: 24px;
+    font-size: 27px;
   }
 }
 
