--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@
 /*#endregion*/
 /*#region Header*/
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -82,21 +86,24 @@ header .menu > ul li > a:hover {
 /*#region Banner*/
 #banner {
   background: #101010;
-  height: calc(100vh - 119px);
+  height: 100vh;
   display: flex;
   justify-content: center;
 }
-#banner .texts {
-  margin: auto;
+#banner .elements {
+  display: flex;
+}
+#banner .elements .texts {
+  margin: auto 50px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   color: #cecece;
 }
-#banner .texts h1 {
+#banner .elements .texts h1 {
   font-size: 66px;
 }
-#banner .texts h2 {
+#banner .elements .texts h2 {
   font-size: 33px;
 }
 
@@ -142,16 +149,21 @@ header .menu > ul li > a:hover {
     background: #cecece;
     border-radius: 2px;
   }
-  #banner .lottie {
-    margin: auto;
+  #banner .elements {
+    flex-direction: column;
+    align-items: center;
   }
-  #banner .texts {
-    margin: auto;
+  #banner .elements .lottie {
+    margin-top: 150px;
   }
-  #banner .texts h1 {
+  #banner .elements .texts {
+    margin: auto;
+    text-align: center;
+  }
+  #banner .elements .texts h1 {
     font-size: 54px;
   }
-  #banner .texts h2 {
+  #banner .elements .texts h2 {
     font-size: 27px;
   }
 }
