--- a/sass/style.scss
+++ b/sass/style.scss
@@ -30,6 +30,10 @@
 
 /*#region Header*/
 header {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -85,25 +89,27 @@ header {
 /*#region Banner*/
 #banner {
   background: $def-tert-color;
-  height: calc(100vh - 119px);
+  height: 100vh;
   display: flex;
   justify-content: center;
 
-  .texts {
-    margin: auto;
+  .elements {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
-    color: $def-light;
-
-    h1 {
-      font-size: 66px;
+    .texts {
+      margin: auto 50px;
+      display: flex;
+      flex-direction: column;
+      justify-content: center;
+      color: $def-light;
+  
+      h1 {
+        font-size: 66px;
+      }
+  
+      h2 {
+        font-size: 33px;
+      }
     }
-
-    h2 {
-      font-size: 33px;
-    }
-
   }
 }
 /*#endregion*/
@@ -160,18 +166,25 @@ header {
   }
 
   #banner {
-    .lottie {
-      margin: auto;
-    }
+    .elements {
+      flex-direction: column;
+      align-items: center;
 
-    .texts {
-      margin: auto;
-
-      h1 {
-        font-size: 54px;
+      .lottie {
+        margin-top: 150px;
+        
       }
-      h2 {
-        font-size: 27px;
+  
+      .texts {
+        margin: auto;
+        text-align: center;
+  
+        h1 {
+          font-size: 54px;
+        }
+        h2 {
+          font-size: 27px;
+        }
       }
     }
   }
