--- a/css/style.css
+++ b/css/style.css
@@ -150,11 +150,12 @@ header .menu > ul li > a:hover {
     border-radius: 2px;
   }
   #banner .elements {
+    display: flex;
     flex-direction: column;
     align-items: center;
   }
   #banner .elements .lottie {
-    margin-top: 150px;
+    margin-top: 100px;
   }
   #banner .elements .texts {
     margin: auto;
