--- a/sass/style.scss
+++ b/sass/style.scss
@@ -167,12 +167,12 @@ header {
 
   #banner {
     .elements {
+      display: flex;
       flex-direction: column;
       align-items: center;
 
       .lottie {
-        margin-top: 150px;
-        
+        margin-top: 100px;
       }
   
       .texts {
