PORT 2022.06.26 > criação da seção sobre mim

--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -5,6 +5,7 @@ $def-light: #cecece;
 $def-prim-color: #1a1a1a;
 $def-secn-color: #3b3b3b;
 $def-tert-color: #101010;
+$def-quat-color: #121212;
 
 $success: #49e749;
 $warning: #e5ee66;
