--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,7 @@
 /*#endregion*/
 /*#region Header*/
 header {
+  z-index: 9;
   position: fixed;
   top: 0;
   left: 0;
@@ -105,6 +106,47 @@ header .menu > ul li > a:hover {
 }
 #banner .elements .texts h2 {
   font-size: 33px;
+}
+
+/*#endregion*/
+/*#region About Me*/
+#aboutMe {
+  height: 100vh;
+  background: #121212;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#aboutMe .elements {
+  margin-top: 100px;
+  display: flex;
+}
+#aboutMe .elements .profImg > img {
+  height: 200px;
+  width: 200px;
+  border-radius: 50%;
+}
+#aboutMe .elements .profItems {
+  margin-left: 75px;
+}
+#aboutMe .elements .profItems .title {
+  color: #cecece;
+  font-size: 35px;
+}
+#aboutMe .elements .profItems .smIcons {
+  color: #cecece;
+  margin-top: 10px;
+  margin-bottom: 20px;
+}
+#aboutMe .elements .profItems .smIcons i {
+  font-size: 35px;
+  padding: 5px;
+}
+#aboutMe .elements .profItems .descr {
+  color: #cecece;
+  text-align: justify;
+  font-size: 15px;
+  font-style: oblique;
 }
 
 /*#endregion*/
