PORT 2022.06.27 > criando página 'sobre mim'

--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -1,6 +1,7 @@
 /*#region COLOR DEFAULT*/
 //1. default
 $def-light: #cecece;
+$def-darks: #030303;
 
 $def-prim-color: #1a1a1a;
 $def-secn-color: #3b3b3b;
