--- a/css/style.css
+++ b/css/style.css
@@ -10,6 +10,10 @@
   scroll-behavior: smooth;
 }
 
+body {
+  overflow-x: hidden;
+}
+
 .container {
   width: 1140px;
   display: flex;
@@ -93,6 +97,7 @@ header .menu > ul li > a:hover {
   padding: 10px;
 }
 #banner .elements {
+  padding-top: 50px;
   display: flex;
 }
 #banner .elements .texts {
@@ -100,6 +105,7 @@ header .menu > ul li > a:hover {
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   color: #cecece;
 }
 #banner .elements .texts h1 {
@@ -108,23 +114,94 @@ header .menu > ul li > a:hover {
 #banner .elements .texts h2 {
   font-size: 33px;
 }
+#banner .elements .texts button {
+  margin-top: 20px;
+  height: 60px;
+  width: 120px;
+  border: 2px solid #cecece;
+  border-radius: 4px;
+  background-color: transparent;
+}
+#banner .elements .texts button a {
+  text-decoration: none;
+  color: #cecece;
+}
+#banner .elements .texts button a p {
+  font-size: 15px;
+  text-transform: uppercase;
+}
+#banner .elements .texts button:hover {
+  transition: 400ms;
+  background-color: #cecece;
+}
+#banner .elements .texts button:hover p {
+  color: #030303;
+}
 
 /*#endregion*/
 /*#region About Me*/
 #aboutMe {
+  min-height: 150vh;
+  background: #101010;
   display: flex;
-  height: 100vh;
-  background: #121212;
-  padding: 150px;
+  justify-content: center;
+  align-items: center;
+  padding: 15px;
 }
-#aboutMe img {
-  height: 300px;
-  width: 300px;
-  border-radius: 25%;
-}
-#aboutMe .profItems {
+#aboutMe .elements {
+  height: 70vh;
   display: flex;
   flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#aboutMe .elements .profImg > img {
+  margin-top: 75px;
+  height: 250px;
+  border-radius: 50%;
+}
+#aboutMe .elements .profItems {
+  text-align: justify;
+}
+#aboutMe .elements .profItems .title {
+  color: #cecece;
+  font-size: 25px;
+}
+#aboutMe .elements .profItems .smBtn {
+  padding: 30px;
+  display: flex;
+  justify-content: center;
+}
+#aboutMe .elements .profItems .smBtn button {
+  height: 45px;
+  width: 150px;
+  border-radius: 5px;
+  background: transparent;
+  margin: 20px;
+  border: 2px solid #cecece;
+}
+#aboutMe .elements .profItems .smBtn button a {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  color: #cecece;
+}
+#aboutMe .elements .profItems .smBtn button a i {
+  font-size: 30px;
+}
+#aboutMe .elements .profItems .smBtn button a p {
+  padding: 10px;
+}
+#aboutMe .elements .profItems .smBtn button:hover {
+  transition: 400ms;
+  background: #cecece;
+}
+#aboutMe .elements .profItems .smBtn button:hover a, #aboutMe .elements .profItems .smBtn button:hover i, #aboutMe .elements .profItems .smBtn button:hover p {
+  color: #030303;
+}
+#aboutMe .elements .profItems .descr {
+  color: #cecece;
 }
 
 /*#endregion*/
@@ -169,26 +246,40 @@ header .menu > ul li > a:hover {
     background: #cecece;
     border-radius: 2px;
   }
+  #banner {
+    height: 120vh;
+  }
   #banner .elements {
     display: flex;
     flex-direction: column;
     align-items: center;
   }
-  #banner .elements .lottie {
-    margin-top: 100px;
+  #banner .elements .lottie > lottie-player {
+    margin-top: 50px;
+    height: 400px;
+    width: 400px;
   }
   #banner .elements .texts {
-    margin: auto;
     text-align: center;
   }
   #banner .elements .texts h1 {
-    font-size: 48px;
+    font-size: 42px;
   }
   #banner .elements .texts h2 {
     font-size: 24px;
   }
-  #banner #aboutMe {
-    display: block;
+  #banner .elements .texts button {
+    height: 45px;
+    width: 180px;
+  }
+  #banner .elements .texts button a > p {
+    padding: auto;
+    font-size: 15px;
+  }
+  #aboutMe {
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 }
 
