--- a/sass/style.scss
+++ b/sass/style.scss
@@ -331,7 +331,7 @@ header {
       }
       
       .profItems > .smBtn {
-        display: block;
+        display: flex;
       }
 
       .profItems > .descr {
