--- a/css/style.css
+++ b/css/style.css
@@ -119,7 +119,7 @@ header .menu > ul li > a:hover {
   height: 60px;
   width: 120px;
   border: 2px solid #cecece;
-  border-radius: 4px;
+  border-radius: 10px;
   background-color: transparent;
 }
 #banner .elements .texts button a {
@@ -150,6 +150,8 @@ header .menu > ul li > a:hover {
 #aboutMe .elements {
   width: 100%;
   display: flex;
+  margin-top: 150px;
+  margin-bottom: 300px;
 }
 #aboutMe .elements .profImg {
   width: 30%;
