PORT 2022.06.27 > criando a página 'habilidades'

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -102,6 +102,10 @@ header {
     padding-top: 50px;
     display: flex;
 
+    .lottie {
+      margin-top: 100px;
+    }
+
     .texts {
       margin: auto 10px;
       display: flex;
