--- a/css/style.css
+++ b/css/style.css
@@ -100,6 +100,9 @@ header .menu > ul li > a:hover {
   padding-top: 50px;
   display: flex;
 }
+#banner .elements .lottie {
+  margin-top: 100px;
+}
 #banner .elements .texts {
   margin: auto 10px;
   display: flex;
