--- a/sass/colors.scss
+++ b/sass/colors.scss
@@ -3,10 +3,10 @@
 $def-light: #cecece;
 $def-darks: #030303;
 
-$def-prim-color: #1a1a1a;
-$def-secn-color: #3b3b3b;
-$def-tert-color: #101010;
-$def-quat-color: #121212;
+$def-prim-dark: #1a1a1a;
+$def-secn-dark: #3b3b3b;
+$def-tert-dark: #101010;
+$def-quat-dark: #121212;
 
 $success: #49e749;
 $warning: #e5ee66;
