PORT 2022.06.27 >  teste em mobile

--- a/css/style.css
+++ b/css/style.css
@@ -371,6 +371,9 @@ header .menu > ul li > a:hover {
   #aboutMe .elements .profItems > .descr {
     text-align: justify;
   }
+  #skills .elements > .title > h1 {
+    font-size: 45px;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
